chat: add message list cache
