# chat-service/internal/api/http/v1/routes.go
@@ -20,6 +20,7 @@ func MapRoutes(
 	{
 		v1.POST("/conversation/create", conversationHandler.CreateConversation)
 		v1.POST("/conversations/:id/messages/create", messageRateLimitMiddleware, messageHandler.CreateMessage)
+		v1.GET("/conversations/:id/messages", messageHandler.ListMessages)
 	}
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
